--- a/assets/css/Shop/shop.css
+++ b/assets/css/Shop/shop.css
@@ -1,1 +1,954 @@
-/* No CSS *//*# sourceMappingURL=shop.css.map */
+header #covid19 * {
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+header #covid19 .header-txt {
+  height: 5vh;
+}
+
+header #covid19 .header-txt p {
+  text-align: center;
+  background-color: #233a95;
+  color: white;
+  font-family: "Inter", sans-serif;
+}
+
+header #headermenu {
+  border-bottom: 1px solid #2bbef9;
+}
+
+header #headermenu .headermenu .container * {
+  padding: 0 !important;
+}
+
+header #headermenu .headermenu nav ul {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-left: 0;
+}
+
+header #headermenu .headermenu nav ul li a {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  text-decoration: none;
+  color: black;
+  font-size: 90%;
+  margin-right: 10px;
+  font-weight: 400;
+  font-family: "Inter", sans-serif;
+}
+
+header #headermenu .headermenu nav ul li a:hover {
+  color: #2bbef9;
+  -webkit-transition: all .4s;
+  transition: all .4s;
+}
+
+header #headermenu .secured * {
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+header #headermenu .secured .icon-text {
+  float: right;
+  border-right: 1px solid #2bbef9;
+}
+
+header #headermenu .secured img {
+  display: inline-block;
+  width: 4%;
+  padding-left: 40%;
+}
+
+header #headermenu .secured span {
+  display: inline-block;
+  font-weight: 300;
+  font-size: 90%;
+  font-family: "Inter", sans-serif;
+  margin-right: 5px;
+}
+
+header #headermenu .secured span::before {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 6px;
+  vertical-align: middle;
+  content: "\f132";
+}
+
+header #headermenu .num-select span {
+  display: inline-block;
+  font-weight: 300;
+  font-size: 90%;
+  font-family: "Inter", sans-serif;
+}
+
+header #headermenu .num-select a {
+  text-decoration: none;
+  color: #2bbef9;
+  padding-left: 10px;
+}
+
+header #headermenu .num-select a:hover {
+  text-decoration: underline;
+  -webkit-transition: all .9s;
+  transition: all .9s;
+}
+
+header #headermenu .num-select .dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+header #headermenu .num-select .dropdown span:hover {
+  color: #2bbef9;
+}
+
+header #headermenu .num-select .dropdown .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 80px;
+  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  text-align: center;
+}
+
+header #headermenu .num-select .dropdown .dropdown-content P {
+  margin: 0;
+  padding: 0px 10px;
+}
+
+header #headermenu .num-select .dropdown .dropdown-content:hover {
+  color: #2bbef9;
+}
+
+header #headermenu .num-select .dropdown:hover .dropdown-content {
+  display: block;
+}
+
+header #mainheader .logo img {
+  width: 100%;
+}
+
+header #mainheader .logo span {
+  font-size: 59%;
+  color: #2bbef9;
+  cursor: pointer;
+}
+
+header #mainheader .location {
+  margin-top: 15px;
+  border: 1px solid #2bbef9;
+  border-radius: 10px;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  cursor: pointer;
+  margin-left: 46px;
+}
+
+header #mainheader .location #myInput {
+  background-image: url("/css/searchicon.png");
+  background-position: 10px 12px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
+
+header #mainheader .location #myUL {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+header #mainheader .location #myUL li a {
+  border: 1px solid #ddd;
+  margin-top: -1px;
+  background-color: #f6f6f6;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+  display: block;
+}
+
+header #mainheader .location #myUL li a:hover:not(.header) {
+  background-color: #eee;
+}
+
+header #mainheader .location #myUL li:hover {
+  color: #2bbef9 !important;
+}
+
+header #mainheader .location span {
+  display: block;
+  font-size: 59%;
+  color: #2bbef9;
+}
+
+header #mainheader .location:hover {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  -webkit-transition: all .4s;
+  transition: all .4s;
+}
+
+header #mainheader .location button {
+  width: 100%;
+  height: 50%;
+  background: none;
+  margin-left: 0;
+  border: none;
+  padding-left: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+header #mainheader .location button::after {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 6px;
+  vertical-align: middle;
+  padding-left: 20px;
+  color: #2bbef9;
+  content: "\f078";
+}
+
+header #mainheader .searchbox form {
+  padding-top: 21px;
+}
+
+header #mainheader .searchbox form input {
+  border: none;
+  width: 90%;
+  height: 48px;
+  background: #f3f4f7;
+  padding-left: 20px;
+  border-radius: 10px;
+}
+
+header #mainheader .searchbox form input:focus {
+  outline: none;
+}
+
+header #mainheader .searchbox form input::after {
+  content: "\f078";
+}
+
+header #mainheader .shoping {
+  padding-top: 30px;
+}
+
+header #mainheader .shoping i {
+  cursor: pointer;
+  font-size: 30px;
+  margin-right: 20px;
+}
+
+header #mainheader .shoping i:last-child {
+  background-color: aquamarine;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border-radius: 26px;
+}
+
+header #mainheader .shoping .shop {
+  width: 20%;
+  margin: 0;
+}
+
+header #mainheader .shoping span {
+  font-size: 30px;
+  font-size: 22px;
+  margin-right: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+header #navmenu .allcatagories {
+  margin-top: 2vh;
+  width: 70%;
+  height: 7vh;
+  background-color: #2bbef9;
+  border-radius: 20px;
+  position: relative;
+}
+
+header #navmenu .allcatagories span {
+  position: absolute;
+  left: 7%;
+  top: 26%;
+  color: white;
+  font-weight: 30%;
+  font-size: large;
+  cursor: pointer;
+}
+
+header #navmenu .allcatagories span::before {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 6px;
+  vertical-align: middle;
+  content: '\f0c9';
+  font-size: 15px;
+  padding-bottom: 2px;
+}
+
+header #navmenu .allcatagories span::after {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 6px;
+  vertical-align: middle;
+  content: '\f107';
+  padding-left: 15px;
+}
+
+header #navmenu .navbar ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  margin-top: 2%;
+  float: right;
+}
+
+header #navmenu .navbar ul .active {
+  background-color: #2bbef9;
+}
+
+header #navmenu .navbar ul li {
+  padding: 5px 10px;
+  border-radius: 13px;
+  font-size: 14px;
+}
+
+header #navmenu .navbar ul li:nth-child(1)::after {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 6px;
+  vertical-align: middle;
+  content: '\f107';
+  padding-left: 15px;
+  color: black;
+  font-size: 18px;
+  margin-bottom: 2px;
+}
+
+header #navmenu .navbar ul li:nth-child(2)::after {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 6px;
+  vertical-align: middle;
+  content: '\f107';
+  padding-left: 15px;
+  color: black;
+  font-size: 18px;
+  margin-bottom: 2px;
+}
+
+header #navmenu .navbar ul li:nth-child(3)::before {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 6px;
+  vertical-align: middle;
+  content: '\f6d7';
+  padding-left: 15px;
+  color: black;
+  font-size: 18px;
+  margin-bottom: 2px;
+}
+
+header #navmenu .navbar ul li:nth-child(4)::before {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 6px;
+  vertical-align: middle;
+  content: '\f6d7';
+  padding-left: 15px;
+  color: black;
+  font-size: 18px;
+  margin-bottom: 2px;
+}
+
+header #navmenu .navbar ul li:nth-child(5)::before {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 6px;
+  vertical-align: middle;
+  content: '\f6d7';
+  padding-left: 15px;
+  color: black;
+  font-size: 18px;
+  margin-bottom: 2px;
+}
+
+header #navmenu .navbar ul li:nth-child(6)::before {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 6px;
+  vertical-align: middle;
+  content: '\f6d7';
+  padding-left: 15px;
+  color: black;
+  font-size: 18px;
+  margin-bottom: 2px;
+}
+
+header #navmenu .navbar ul li:nth-child(7)::before {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 6px;
+  vertical-align: middle;
+  content: '\f6d7';
+  padding-left: 15px;
+  color: black;
+  font-size: 18px;
+  margin-bottom: 2px;
+}
+
+header #navmenu .navbar ul li a {
+  color: black;
+  text-decoration: none;
+  font-family: "Inter", sans-serif;
+}
+
+header .allcatagoriescontent {
+  position: absolute;
+  top: 250px;
+  left: 120px;
+  width: auto;
+  height: auto;
+  z-index: 2;
+}
+
+header .allcatagoriescontent ul {
+  padding: 0;
+  list-style: none;
+  background-color: white;
+}
+
+header .allcatagoriescontent ul li {
+  text-align: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: 7px 30px 15px 10px;
+  font-size: 120%;
+  color: black;
+}
+
+header .allcatagoriescontent ul li .btn {
+  margin: 0;
+  padding: 0;
+  font-size: 17px;
+}
+
+header .allcatagoriescontent ul li .sub-menu {
+  width: 300px;
+}
+
+header .allcatagoriescontent ul li a {
+  text-decoration: none;
+  text-align: center;
+  color: black;
+  background: none;
+}
+
+header .allcatagoriescontent ul li a:hover {
+  color: #233a95;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+header .homesections {
+  position: absolute;
+  top: 237px;
+  left: 472px;
+  width: auto;
+  height: auto;
+  z-index: 2;
+  display: none;
+}
+
+header .homesections ul {
+  list-style: none;
+  display: inline-block;
+  background-color: white;
+  width: auto;
+}
+
+header .homesections ul li {
+  margin-right: 57px;
+  margin-top: 10px;
+}
+
+header .homesections ul li:hover {
+  color: #233a95;
+}
+
+header .shopsections {
+  position: absolute;
+  top: 237px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background-color: white;
+  z-index: 7;
+}
+
+header .shopsections > ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+}
+
+header .shopsections > ul a {
+  text-decoration: none;
+}
+
+header .shopsections > ul li ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  padding-top: 20px;
+  padding-right: 120px;
+}
+
+header .shopsections > ul li ul a {
+  display: block;
+  padding-bottom: 10px;
+}
+
+header .shopsections > ul li ul li {
+  padding-bottom: 5px;
+}
+
+main .shopmain {
+  width: 1700px;
+}
+
+main .shopmain .productcatagories {
+  width: 100%;
+  height: 255px;
+  overflow-y: scroll;
+  padding: 20px;
+}
+
+main .shopmain .productcatagories .open {
+  display: block;
+}
+
+main .shopmain .productcatagories div input, main .shopmain .productcatagories div span {
+  color: #233a95;
+}
+
+main .shopmain .productcatagories div input {
+  background-color: #233a95;
+}
+
+main .shopmain .productcatagories div span {
+  position: relative;
+}
+
+main .shopmain .productcatagories div span i {
+  margin-left: 130px;
+}
+
+main .shopmain .productcatagories ul {
+  list-style: none;
+  display: none;
+}
+
+main .shopmain .image {
+  position: relative;
+}
+
+main .shopmain .image img {
+  border-radius: 10px;
+}
+
+main .shopmain .image span {
+  position: absolute;
+  top: 20%;
+  left: 20%;
+  font-size: 30px;
+}
+
+main .shopmain .image h3, main .shopmain .image h2 {
+  position: absolute;
+  display: inline;
+  left: 20%;
+  top: 40%;
+  font-weight: bold;
+}
+
+main .shopmain .image h2 {
+  left: 55%;
+  top: 37%;
+  font-weight: bold;
+  color: orange;
+}
+
+main .shopmain .grid {
+  background-color: #f7f8fd;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 5px;
+}
+
+main .shopmain .grid i {
+  margin: 7px;
+  padding: 15px 10px;
+}
+
+main .shopmain .grid div {
+  position: absolute;
+  display: inline;
+  right: 20px;
+  cursor: pointer;
+}
+
+main .shopmain .col-4 {
+  padding: 0;
+}
+
+main .shopmain .col-4 .mycard {
+  position: relative;
+  border: none;
+  border-right: 1px solid #edeef5;
+  border-bottom: 1px solid #edeef5;
+}
+
+main .shopmain .col-4 .mycard .card-body {
+  position: inherit;
+}
+
+main .shopmain .col-4 .mycard .card-body h5 {
+  font-size: 15px;
+  color: #202335;
+  font-family: "Intern",sans-serif;
+}
+
+main .shopmain .col-4 .mycard .card-body .stock {
+  color: #00b853;
+  font-size: .6875rem;
+  margin-bottom: 0.625rem;
+  font-weight: bold;
+}
+
+main .shopmain .col-4 .mycard .card-body .rateing {
+  font-family: 'klbtheme';
+  font-size: 11px;
+  padding-top: 10px;
+}
+
+main .shopmain .col-4 .mycard .card-body .rateing .activerateing {
+  color: orange;
+}
+
+main .shopmain .col-4 .mycard .card-body .price .oldprice {
+  text-decoration: line-through;
+  color: #c2c2de;
+  font-size: 80%;
+  font-weight: 500;
+}
+
+main .shopmain .col-4 .mycard .card-body .price .newprice {
+  font-family: "Dosis",sans-serif;
+}
+
+main .shopmain .col-4 .mycard .card-body a {
+  width: 100%;
+  background-color: #233a95;
+  color: white;
+  border-radius: 20px;
+  opacity: 0;
+  position: relative;
+}
+
+main .shopmain .col-4 .mycard:hover a {
+  opacity: 1;
+  -webkit-transition: all .8s;
+  transition: all .8s;
+  margin-top: 220px;
+}
+
+main .shopmain .col-4 .mycard:hover {
+  position: relative;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  border: 2px solid #edeef5;
+  z-index: 12;
+}
+
+main .shopmain .col-4 .mycard .percent {
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  background-color: #0077b5;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-family: "Dosis", sans serif;
+  font-weight: 700;
+}
+
+main .shopmain .col-4 .mycard .zoom {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 30px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
+  border-radius: 50%;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  opacity: 0;
+}
+
+main .shopmain .col-4 .mycard .zoom:hover {
+  background-color: #1da1f2;
+  color: white;
+}
+
+main .shopmain .col-4 .mycard .heart {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 80px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
+  border-radius: 50%;
+  -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  opacity: 0;
+}
+
+main .shopmain .col-4 .mycard .heart:hover {
+  background-color: #1da1f2;
+  color: white;
+}
+
+main .shopmain .col-4 .mycard:hover .heart {
+  opacity: 1;
+  -webkit-transition: all .5s;
+  transition: all .5s;
+}
+
+main .shopmain .col-4 .mycard:hover .zoom {
+  opacity: 1;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+footer .main {
+  background-color: #233a95;
+  width: 100%;
+}
+
+footer .main .owncontainer {
+  width: 1200px;
+  position: relative;
+}
+
+footer .main .owncontainer .joinus .content {
+  padding-top: 80px;
+  position: absolute;
+  height: 100%;
+}
+
+footer .main .owncontainer .joinus .content p {
+  color: white;
+}
+
+footer .main .owncontainer .joinus .content h4 {
+  color: white;
+}
+
+footer .main .owncontainer .joinus .content span {
+  display: block;
+  width: 80%;
+  height: auto;
+  color: #ddd;
+}
+
+footer .main .owncontainer .joinus .content .mail span {
+  width: auto;
+  height: auto;
+  font-size: 26px;
+  border: none;
+  background: white;
+  border-radius: 0px;
+}
+
+footer .main .owncontainer .joinus .content .mail input[type=button] {
+  background-color: #233a95;
+  color: white;
+}
+
+footer .main .owncontainer .img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
+footer .owncontainer {
+  width: 1200px;
+  position: relative;
+}
+
+footer .owncontainer .col-3 span {
+  display: inline-block;
+  font-weight: 400;
+  padding-top: 20px;
+  font-family: "Inter", sans-serif;
+  cursor: pointer;
+}
+
+footer .owncontainer .col-3 span::before {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 6px;
+  vertical-align: middle;
+}
+
+footer .owncontainer .col-3 span:nth-child(1)::before {
+  content: '\f7ef';
+  padding-left: 15px;
+  color: black;
+  font-size: 18px;
+  margin-bottom: 2px;
+}
+
+footer .info .owncontainer {
+  width: 1200px;
+  margin-top: 30px;
+}
+
+footer .info .owncontainer .mylist .mylistelements h4 {
+  font-size: medium;
+  text-align: start;
+}
+
+footer .info .owncontainer .mylist .mylistelements ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+footer .info .owncontainer .mylist .mylistelements ul li {
+  text-align: start;
+}
+
+footer .info .owncontainer .mylist .mylistelements ul li a {
+  text-decoration: none;
+  color: #2bbef9;
+}
+
+footer .contact .contactdetails {
+  width: 1200px;
+}
+
+footer .contact .contactdetails .number h2::before {
+  font-family: FontAwesome;
+  display: inline-block;
+  padding-right: 6px;
+  vertical-align: middle;
+  content: '\f095';
+  padding-left: 15px;
+  color: black;
+  margin-bottom: 2px;
+  width: auto;
+  height: auto;
+  font-size: 23px;
+  padding-bottom: 3px;
+}
+
+footer .contact .contactdetails .number span {
+  margin-left: 36px;
+}
+
+footer .contact .contactdetails .rightsection {
+  position: relative;
+}
+
+footer .contact .contactdetails .rightsection .socialmedias {
+  position: absolute;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+footer .contact .contactdetails .rightsection .socialmedias i {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 35px;
+  width: auto;
+  color: cornflowerblue;
+  height: auto;
+  padding: 5px;
+  border: 1px solid blue;
+  border-radius: 50%;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+footer .contact .contactdetails .rightsection .mobileapps {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  right: 150px;
+  top: 7px;
+  position: absolute;
+}
+/*# sourceMappingURL=shop.css.map */
