--- a/assets/css/Shop/shop.css
+++ b/assets/css/Shop/shop.css
@@ -548,14 +548,42 @@ main .shopmain {
 }
 
 main .shopmain .productcatagories {
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
   width: 100%;
-  height: 255px;
-  overflow-y: scroll;
+  height: 257px;
+  overflow-y: auto;
   padding: 20px;
+}
+
+main .shopmain .productcatagories::-webkit-scrollbar {
+  width: 8px;
+}
+
+main .shopmain .productcatagories::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 5px grey;
+          box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+main .shopmain .productcatagories::-webkit-scrollbar-thumb {
+  background: #a39292;
+  border-radius: 10px;
+}
+
+main .shopmain .productcatagories::-webkit-scrollbar-thumb:hover {
+  background: #917777;
 }
 
 main .shopmain .productcatagories .open {
   display: block;
+}
+
+main .shopmain .productcatagories div {
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
 }
 
 main .shopmain .productcatagories div input, main .shopmain .productcatagories div span {
@@ -574,9 +602,63 @@ main .shopmain .productcatagories div span i {
   margin-left: 130px;
 }
 
+main .shopmain .productcatagories div ::-webkit-scrollbar {
+  width: 20px;
+}
+
+main .shopmain .productcatagories div ::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 5px grey;
+          box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+main .shopmain .productcatagories div ::-webkit-scrollbar-thumb {
+  background: red;
+  border-radius: 10px;
+}
+
+main .shopmain .productcatagories div ::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
+}
+
 main .shopmain .productcatagories ul {
   list-style: none;
   display: none;
+}
+
+main .shopmain .slider {
+  -webkit-appearance: none;
+  width: 80%;
+  height: 10px;
+  border-radius: 5px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  -webkit-transition: opacity .2s;
+  transition: opacity .2s;
+}
+
+main .shopmain .slider:hover {
+  opacity: 1;
+}
+
+main .shopmain .slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
+main .shopmain .slider::-moz-range-thumb {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: #04AA6D;
+  cursor: pointer;
 }
 
 main .shopmain .image {
@@ -630,56 +712,62 @@ main .shopmain .grid div {
   cursor: pointer;
 }
 
-main .shopmain .col-4 {
+main .shopmain .activepage {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+}
+
+main .shopmain .col-4, main .shopmain .col-3 {
   padding: 0;
 }
 
-main .shopmain .col-4 .mycard {
+main .shopmain .col-4 .mycard, main .shopmain .col-3 .mycard {
   position: relative;
   border: none;
   border-right: 1px solid #edeef5;
   border-bottom: 1px solid #edeef5;
 }
 
-main .shopmain .col-4 .mycard .card-body {
+main .shopmain .col-4 .mycard .card-body, main .shopmain .col-3 .mycard .card-body {
   position: inherit;
 }
 
-main .shopmain .col-4 .mycard .card-body h5 {
+main .shopmain .col-4 .mycard .card-body h5, main .shopmain .col-3 .mycard .card-body h5 {
   font-size: 15px;
   color: #202335;
   font-family: "Intern",sans-serif;
 }
 
-main .shopmain .col-4 .mycard .card-body .stock {
+main .shopmain .col-4 .mycard .card-body .stock, main .shopmain .col-3 .mycard .card-body .stock {
   color: #00b853;
   font-size: .6875rem;
   margin-bottom: 0.625rem;
   font-weight: bold;
 }
 
-main .shopmain .col-4 .mycard .card-body .rateing {
+main .shopmain .col-4 .mycard .card-body .rateing, main .shopmain .col-3 .mycard .card-body .rateing {
   font-family: 'klbtheme';
   font-size: 11px;
   padding-top: 10px;
 }
 
-main .shopmain .col-4 .mycard .card-body .rateing .activerateing {
+main .shopmain .col-4 .mycard .card-body .rateing .activerateing, main .shopmain .col-3 .mycard .card-body .rateing .activerateing {
   color: orange;
 }
 
-main .shopmain .col-4 .mycard .card-body .price .oldprice {
+main .shopmain .col-4 .mycard .card-body .price .oldprice, main .shopmain .col-3 .mycard .card-body .price .oldprice {
   text-decoration: line-through;
   color: #c2c2de;
   font-size: 80%;
   font-weight: 500;
 }
 
-main .shopmain .col-4 .mycard .card-body .price .newprice {
+main .shopmain .col-4 .mycard .card-body .price .newprice, main .shopmain .col-3 .mycard .card-body .price .newprice {
   font-family: "Dosis",sans-serif;
 }
 
-main .shopmain .col-4 .mycard .card-body a {
+main .shopmain .col-4 .mycard .card-body a, main .shopmain .col-3 .mycard .card-body a {
   width: 100%;
   background-color: #233a95;
   color: white;
@@ -688,14 +776,14 @@ main .shopmain .col-4 .mycard .card-body a {
   position: relative;
 }
 
-main .shopmain .col-4 .mycard:hover a {
+main .shopmain .col-4 .mycard:hover a, main .shopmain .col-3 .mycard:hover a {
   opacity: 1;
   -webkit-transition: all .8s;
   transition: all .8s;
   margin-top: 220px;
 }
 
-main .shopmain .col-4 .mycard:hover {
+main .shopmain .col-4 .mycard:hover, main .shopmain .col-3 .mycard:hover {
   position: relative;
   -webkit-box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
           box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -703,7 +791,7 @@ main .shopmain .col-4 .mycard:hover {
   z-index: 12;
 }
 
-main .shopmain .col-4 .mycard .percent {
+main .shopmain .col-4 .mycard .percent, main .shopmain .col-3 .mycard .percent {
   position: absolute;
   left: 10px;
   top: 10px;
@@ -715,7 +803,7 @@ main .shopmain .col-4 .mycard .percent {
   font-weight: 700;
 }
 
-main .shopmain .col-4 .mycard .zoom {
+main .shopmain .col-4 .mycard .zoom, main .shopmain .col-3 .mycard .zoom {
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -737,12 +825,12 @@ main .shopmain .col-4 .mycard .zoom {
   opacity: 0;
 }
 
-main .shopmain .col-4 .mycard .zoom:hover {
+main .shopmain .col-4 .mycard .zoom:hover, main .shopmain .col-3 .mycard .zoom:hover {
   background-color: #1da1f2;
   color: white;
 }
 
-main .shopmain .col-4 .mycard .heart {
+main .shopmain .col-4 .mycard .heart, main .shopmain .col-3 .mycard .heart {
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -764,21 +852,52 @@ main .shopmain .col-4 .mycard .heart {
   opacity: 0;
 }
 
-main .shopmain .col-4 .mycard .heart:hover {
+main .shopmain .col-4 .mycard .heart:hover, main .shopmain .col-3 .mycard .heart:hover {
   background-color: #1da1f2;
   color: white;
 }
 
-main .shopmain .col-4 .mycard:hover .heart {
+main .shopmain .col-4 .mycard:hover .heart, main .shopmain .col-3 .mycard:hover .heart {
   opacity: 1;
   -webkit-transition: all .5s;
   transition: all .5s;
 }
 
-main .shopmain .col-4 .mycard:hover .zoom {
+main .shopmain .col-4 .mycard:hover .zoom, main .shopmain .col-3 .mycard:hover .zoom {
   opacity: 1;
   -webkit-transition: all .3s;
   transition: all .3s;
+}
+
+main .shopmain .pagenation {
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+main .shopmain .pagenation ul {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+}
+
+main .shopmain .pagenation ul li {
+  width: 30px;
+  height: 30px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+main .shopmain .pagenation ul li:hover {
+  border-radius: 50%;
+  background-color: #0077b5;
+  color: white;
 }
 
 footer .main {
