--- a/assets/css/Shop/shop.scss
+++ b/assets/css/Shop/shop.scss
@@ -508,9 +508,29 @@ main{
     .shopmain{
         width: 1700px;
         .productcatagories{
+			&::-webkit-scrollbar {
+				width: 8px;
+			  }
+			  
+			  /* Track */
+			&::-webkit-scrollbar-track {
+				box-shadow: inset 0 0 5px grey; 
+				border-radius: 10px;
+			  }
+			   
+			  /* Handle */
+			&::-webkit-scrollbar-thumb {
+				background: rgb(163, 146, 146); 
+				border-radius: 10px;
+			  }
+			  
+			  /* Handle on hover */
+			&::-webkit-scrollbar-thumb:hover {
+				background: #917777; 
+			  }
             width: 100%;
-            height: 255px;
-            overflow-y: scroll;
+            height: 257px;
+            overflow-y: auto;
             padding: 20px;
             .open{
                 display: block ;
@@ -528,12 +548,66 @@ main{
                         margin-left: 130px;
                     }
                 }
+				::-webkit-scrollbar {
+					width: 20px;
+				  }
+				  
+				  /* Track */
+				  ::-webkit-scrollbar-track {
+					box-shadow: inset 0 0 5px grey; 
+					border-radius: 10px;
+				  }
+				   
+				  /* Handle */
+				  ::-webkit-scrollbar-thumb {
+					background: red; 
+					border-radius: 10px;
+				  }
+				  
+				  /* Handle on hover */
+				  ::-webkit-scrollbar-thumb:hover {
+					background: #b30000; 
+				  }
             }
             ul{
                 list-style: none;
                 display:none;
+				
             }
         }
+		.slider {
+			-webkit-appearance: none;
+			width: 80%;
+			height: 10px;
+			border-radius: 5px;
+			background: #d3d3d3;
+			outline: none;
+			opacity: 0.7;
+			-webkit-transition: .2s;
+			transition: opacity .2s;
+		  }
+		  
+		  .slider:hover {
+			opacity: 1;
+		  }
+		  
+		  .slider::-webkit-slider-thumb {
+			-webkit-appearance: none;
+			appearance: none;
+			width: 15px;
+			height: 15px;
+			border-radius: 50%;
+			background: #04AA6D;
+			cursor: pointer;
+		  }
+		  
+		  .slider::-moz-range-thumb {
+			width: 15px;
+			height: 15px;
+			border-radius: 50%;
+			background: #04AA6D;
+			cursor: pointer;
+		  }
         .image{
             position: relative;
             img{
@@ -575,8 +649,13 @@ main{
                 right: 20px;
                 cursor: pointer;
             }
+			
         }
-        .col-4{
+		.activepage{
+			display: flex !important;
+		}
+		
+        .col-4 , .col-3{
             padding: 0;
             .mycard{
 				position: relative;
@@ -696,6 +775,27 @@ main{
 
 			}
         }
+		.pagenation{
+			text-align: center;
+			display: flex;
+			justify-content: center;
+			ul{
+				list-style: none;
+				display: flex;
+				padding: 0;
+				li{
+					width: 30px;
+					height: 30px;
+					font-size: 20px;
+					cursor: pointer;
+					&:hover{
+						border-radius: 50%;
+						background-color: #0077b5;
+						color: white;
+					}
+				}
+			}
+		}
     }
 }
 footer {
